# libFI

./: CMakeLists.txt
data/: 01_Elements_only.xml  01_Elements_only_java.finf  01_Elements_only_table_java.txt  02_Elements_Attributes.xml  02_Elements_Attributes_java.finf  02_Elements_Attributes_table_java.txt  03_Namespace_xhtml.xml  03_Namespace_xhtml_java.finf  03_Namespace_xhtml_java_table_java.txt  04_MultipleNamespaces_svg.xml  04_MultipleNamespaces_svg_java.finf  05_Comments.xml  05_Comments_java.finf  05_Comments_table_java.txt  06_ProcessingInstructions.xml  06_ProcessingInstructions_java.finf
src/: CMakeLists.txt
src/fi/: CMakeLists.txt  Config.h  Constants.h  ContentHandler.cpp  ContentHandler.h  Decoder.cpp  Decoder.h  DefaultParserVocabulary.cpp  DefaultParserVocabulary.h  Encoder.cpp  Encoder.h  EncoderFunctions.cpp  EncoderFunctions.h  EncodingAlgorithms.cpp  EncodingAlgorithms.h  ParserVocabulary.cpp  ParserVocabulary.h  QualifiedNameTable.cpp  QualifiedNameTable.h  SAXParser.cpp  SAXParser.h  StreamBitWriter.cpp  StreamBitWriter.h  Types.h
tests/: CMakeLists.txt  DecoderTests.cpp  EncoderTests.cpp
tools/: CMakeLists.txt  FI2XMLContentHandler.cpp  FI2XMLContentHandler.h  argument_helper.cpp  fitoxml.cpp  printtables.cpp
